--- a/index.html
+++ b/index.html
@@ -7,62 +7,62 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head><body>
         <h1>My Terrarium</h1>
-        <div id="page">
-            <div id="left-container" class="container">
-                <div class="plant-holder">
-                    <img class="plant" alt="green small plant" id="plant1" src="./images/plant1.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="green plant with wide leafs" id="plant2" src="./images/plant2.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="red plant with wide leafs" id="plant3" src="./images/plant3.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="green plant with small leafs" id="plant4" src="./images/plant4.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="blue plant with long narrow leafs" id="plant5" src="./images/plant5.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="green plant with long narrow leafs" id="plant6" src="./images/plant6.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="green plant with six long narrow leafs" src="./images/plant7.png" />
-                </div>
+        <div class="container">
+          <div class="column-left">
+            <div class="plant-holder">
+              <img class="plant" alt="green small plant" id="plant1" src="./images/plant1.png" />
             </div>
-            <div id="right-container" class="container">
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant10" src="./images/plant10.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant11" src="./images/plant11.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant12" src="./images/plant12.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant13" src="./images/plant13.png" />
-                </div>
-                <div class="plant-holder">
-                    <img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
-                </div>
+            <div class="plant-holder">
+              <img class="plant" alt="green plant with wide leafs" id="plant2" src="./images/plant2.png" />
             </div>
-            <div id="terrarium">
-                <div class="jar-top"></div>
-                <div class="jar-walls">
-                    <div class="jar-glossy-long"></div>
-                    <div class="jar-glossy-short"></div>
-                </div>
-                <div class="dirt"></div>
-                <div class="jar-bottom"></div>
+            <div class="plant-holder">
+              <img class="plant" alt="red plant with wide leafs" id="plant3" src="./images/plant3.png" />
             </div>
+            <div class="plant-holder">
+              <img class="plant" alt="green plant with small leafs" id="plant4" src="./images/plant4.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="blue plant with long narrow leafs" id="plant5" src="./images/plant5.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="green plant with long narrow leafs" id="plant6" src="./images/plant6.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="green plant with six long narrow leafs" src="./images/plant7.png" />
+            </div>
+          </div>
+          <div class="column-mid">
+            <div class="jar-top"></div>
+            <div class="jar-walls">
+              <div class="jar-glossy-long"></div>
+              <div class="jar-glossy-short"></div>
+            </div>
+            <div class="dirt"></div>
+            <div class="jar-bottom"></div>
+          </div>
+          <div class="column-right">
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant10" src="./images/plant10.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant11" src="./images/plant11.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant12" src="./images/plant12.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant13" src="./images/plant13.png" />
+            </div>
+            <div class="plant-holder">
+              <img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
+            </div>
+          </div>
         </div>
-    </body>    
+      </body>      
 </html>
