--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     </head><body>
         <h1>My Terrarium</h1>
         <div class="container">
@@ -29,7 +30,7 @@
               <img class="plant" alt="green plant with long narrow leafs" id="plant6" src="./images/plant6.png" />
             </div>
             <div class="plant-holder">
-              <img class="plant" alt="plant" id="green plant with six long narrow leafs" src="./images/plant7.png" />
+              <img class="plant" alt="plant" id="green plant with six long narrow leafs" id="plant7" src="./images/plant7.png" />
             </div>
           </div>
           <div class="column-mid">
