--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="script.js" defer></script>
         <title>Welcome to my Virtual Terrarium</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,7 +30,7 @@
               <img class="plant" alt="green plant with long narrow leafs" id="plant6" src="./images/plant6.png" />
             </div>
             <div class="plant-holder">
-              <img class="plant" alt="plant" id="green plant with six long narrow leafs" src="./images/plant7.png" />
+              <img class="plant" alt="green plant with six long narrow leafs" id="plant7" src="./images/plant7.png" />
             </div>
           </div>
           <div class="column-mid">
