--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <img class="plant" alt="green plant with long narrow leafs" id="plant6" src="./images/plant6.png" />
       </div>
       <div class="plant-holder">
-        <img class="plant" alt="plant" id="green plant with six long narrow leafs" id="plant7"
-          src="./images/plant7.png" />
+        <img class="plant" alt="plant" id="plant7" src="./images/plant7.png" />
       </div>
     </div>
     <div class="column-mid">
